--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -14,6 +14,12 @@
   margin: 10px;
 }
 
+.pdf-overview-section {
+  max-width: 50%;
+  text-align: center;
+  padding: auto;
+}
+
 .card-img-top {
     width: 100%;
     height: 15vw;
@@ -27,9 +33,6 @@ body {
 p:not(body > p) {
    display: block;
    text-overflow: ellipsis;
-   white-space: nowrap;
    word-wrap: break-word;
    overflow: hidden;
-   max-height: 4.5em;
-   line-height: 1.5em;
 }
